# open

./: README.md  pyproject.toml
src/open_app/: __init__.py  cli.py
tests/: test_status.py
